通过点击鼠标控制特效播放和消失

--- a/F-Game/F-Game.CSharp.csproj
+++ b/F-Game/F-Game.CSharp.csproj
@@ -72,6 +72,8 @@
     <Compile Include="Assets\FreeMachineGun\Scripts\FireTheGun.cs" />
     <Compile Include="Assets\Joystick.cs" />
     <Compile Include="Assets\PlayerController.cs" />
+    <Compile Include="Assets\Script\GunFire.cs" />
+    <Compile Include="Assets\Script\PlayFirePartical.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\FreeMachineGun\Shader\BDCS.shader" />
