改为用按钮控制发射子弹

--- a/F-Game/F-Game.CSharp.csproj
+++ b/F-Game/F-Game.CSharp.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Assets\Script\FirePoint.cs" />
     <Compile Include="Assets\Script\GunFire.cs" />
     <Compile Include="Assets\Script\PlayFirePartical.cs" />
+    <Compile Include="Assets\Script\ShootButton.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\FreeMachineGun\Shader\BDCS.shader" />
